Rename function names and varaible names. Put vector objects into arraies instead.

--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(PythonLibs 3.8 REQUIRED)
 message("Python_FOUND:${Python_FOUND}")
 find_package(PythonLibs 3.8 COMPONENTS Interpreter NumPy)
 find_package(OpenMP REQUIRED)
+find_package(MPI REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 
@@ -17,11 +18,13 @@ if (OPENMP_FOUND)
 endif ()
 
 include_directories(${PYTHON_INCLUDE_DIRS})
+include_directories(${MPI_INCLUDE_PATH})
 
 link_libraries(${PYTHON_LIBRARIES})
 link_libraries(Eigen3::Eigen)
 
 
-add_executable(babai_asyn Babai_search_asyn.h Babai_search_asyn.cpp matplotlibcpp.h Babai_search_temp.h)
+add_executable(babai_asyn Babai_search_asyn.h Babai_search_asyn.cpp matplotlibcpp.h Babai_search_mpi.h)
 target_link_libraries(babai_asyn Eigen3::Eigen)
 target_link_libraries(babai_asyn OpenMP::OpenMP_CXX)
+target_link_libraries(babai_asyn ${MPI_C_LIBRARIES})
