--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -24,7 +24,7 @@ link_libraries(${PYTHON_LIBRARIES})
 link_libraries(Eigen3::Eigen)
 
 
-add_executable(babai_asyn Babai_search_asyn.h Babai_search_asyn.cpp matplotlibcpp.h Babai_search_mpi.h)
+add_executable(babai_asyn Babai_search_asyn.h Babai_search_asyn.cpp matplotlibcpp.h)
 target_link_libraries(babai_asyn Eigen3::Eigen)
 target_link_libraries(babai_asyn OpenMP::OpenMP_CXX)
 target_link_libraries(babai_asyn ${MPI_C_LIBRARIES})
