--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -14,7 +14,31 @@ find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lnetcdf")
+
+# Basic options
+if(CXX_COMPILER_GNUCLANG OR CXX_COMPILER_INTEL)
+    set (CMAKE_CXX_FLAGS "-std=c++14 -Wall -Werror")
+    set (CMAKE_C_FLAGS "-std=c11 -Wall -Werror")
+    set (CMAKE_CXX_FLAGS_DEBUG "-g")
+    # if(CXX_COMPILER_GNUCLANG)
+    # 	set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Og")
+    # 	set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og")
+    # else()
+    # set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O1")
+    # set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1")
+    # endif()
+    set (CMAKE_CXX_FLAGS_RELEASE "-O3")
+elseif(CXX_COMPILER_PGI)
+    set (CMAKE_CXX_FLAGS "-std=c++14")
+    set (CMAKE_C_FLAGS "-std=c11")
+    set (CMAKE_CXX_FLAGS_DEBUG "-g")
+    set (CMAKE_CXX_FLAGS_RELEASE "-O2")
+elseif(CXX_COMPILER_CRAY)
+    set (CMAKE_CXX_FLAGS "-h std=c++14 -h error_on_warning")
+    set (CMAKE_C_FLAGS "-h std=c11 -h error_on_warning")
+    set (CMAKE_CXX_FLAGS_DEBUG "-g -O1")
+    set (CMAKE_CXX_FLAGS_RELEASE "-O2")
+endif()
 
 if (OPENMP_FOUND)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
