--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -20,13 +20,13 @@ if(CXX_COMPILER_GNUCLANG OR CXX_COMPILER_INTEL)
     set (CMAKE_CXX_FLAGS "-std=c++14 -Wall -Werror")
     set (CMAKE_C_FLAGS "-std=c11 -Wall -Werror")
     set (CMAKE_CXX_FLAGS_DEBUG "-g")
-    # if(CXX_COMPILER_GNUCLANG)
-    # 	set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Og")
-    # 	set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og")
-    # else()
-    # set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O1")
-    # set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1")
-    # endif()
+     if(CXX_COMPILER_GNUCLANG)
+     	set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Og")
+     	set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og")
+     else()
+     set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O1")
+     set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1")
+     endif()
     set (CMAKE_CXX_FLAGS_RELEASE "-O3")
 elseif(CXX_COMPILER_PGI)
     set (CMAKE_CXX_FLAGS "-std=c++14")
@@ -53,7 +53,7 @@ include_directories("${EIGEN3_INCLUDE_DIR}")
 
 link_libraries(${PYTHON_LIBRARIES})
 
-add_executable(babai_asyn Babai_search_asyn.h Babai_search_asyn_massive.h Babai_search_asyn.cpp)#matplotlibcpp.h)
+add_executable(babai_asyn Babai_search_asyn.h Babai_search_asyn.cpp)#matplotlibcpp.h)
 #target_link_libraries(babai_asyn Eigen3::Eigen)
 target_link_libraries(babai_asyn OpenMP::OpenMP_CXX)
 target_link_libraries(babai_asyn netcdf)
