--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -56,5 +56,5 @@ link_libraries(${PYTHON_LIBRARIES})
 add_executable(babai_asyn Babai_search_asyn.h Babai_search_asyn.cpp)#matplotlibcpp.h)
 #target_link_libraries(babai_asyn Eigen3::Eigen)
 target_link_libraries(babai_asyn OpenMP::OpenMP_CXX)
-target_link_libraries(babai_asyn netcdf)
+#target_link_libraries(babai_asyn netcdf)
 #target_link_libraries(babai_asyn ${MPI_C_LIBRARIES})
