Changes for init_Value

--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -54,7 +54,7 @@ include_directories("${EIGEN3_INCLUDE_DIR}")
 link_libraries(${PYTHON_LIBRARIES})
 
 add_executable(babai_asyn Babai_search_asyn.h Babai_search_asyn.cpp)#matplotlibcpp.h)
-#target_link_libraries(babai_asyn Eigen3::Eigen)
+target_link_libraries(babai_asyn Eigen3::Eigen)
 target_link_libraries(babai_asyn OpenMP::OpenMP_CXX)
 #target_link_libraries(babai_asyn netcdf)
 #target_link_libraries(babai_asyn ${MPI_C_LIBRARIES})
