Change class name

--- a/babai_asyn_cuda/CMakeLists.txt
+++ b/babai_asyn_cuda/CMakeLists.txt
@@ -27,7 +27,7 @@ include_directories(${PYTHON_INCLUDE_DIRS})
 link_libraries(${PYTHON_LIBRARIES})
 link_libraries(Eigen3::Eigen)
 
-add_executable(babai_asyn_cuda Babai_search_asyn.cu ../babai_asyn_c++/Babai_search_asyn.h)
+add_executable(babai_asyn_cuda Babai_search_asyn.cu ../babai_asyn_c++/SILS.h)
 target_link_libraries(babai_asyn_cuda Eigen3::Eigen)
 target_link_libraries(babai_asyn_cuda OpenMP::OpenMP_CXX)
 set_target_properties(babai_asyn_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
