CMake file modify

--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -55,6 +55,8 @@ include_directories("${EIGEN3_INCLUDE_DIR}")
 link_libraries(${PYTHON_LIBRARIES})
 add_executable(sils test.cpp SILS.h SILS.cpp)#matplotlibcpp.h)
 #target_link_libraries(sils Eigen3::Eigen)
-target_link_libraries(sils OpenMP::OpenMP_CXX)
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(sils PUBLIC OpenMP::OpenMP_CXX)
+endif()
 #target_link_libraries(babai_asyn netcdf)
 #target_link_libraries(babai_asyn ${MPI_C_LIBRARIES})
