--- a/babai_asyn_cluster/CMakeLists.txt
+++ b/babai_asyn_cluster/CMakeLists.txt
@@ -56,6 +56,8 @@ link_libraries(${PYTHON_LIBRARIES})
 
 add_executable(sils SILS.h SILS.cpp)#matplotlibcpp.h)
 #target_link_libraries(babai_asyn Eigen3::Eigen)
-target_link_libraries(sils OpenMP::OpenMP_CXX)
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(sils PUBLIC OpenMP::OpenMP_CXX)
+endif()
 #target_link_libraries(babai_asyn netcdf)
 #target_link_libraries(babai_asyn ${MPI_C_LIBRARIES})
