--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -57,6 +57,7 @@ add_executable(sils test.cpp SILS.h SILS.cpp)#matplotlibcpp.h)
 #target_link_libraries(sils Eigen3::Eigen)
 if(OpenMP_CXX_FOUND)
     target_link_libraries(sils PUBLIC OpenMP::OpenMP_CXX)
+    message("OpenMP_CXX_FOUND")
 endif()
 #target_link_libraries(babai_asyn netcdf)
 #target_link_libraries(babai_asyn ${MPI_C_LIBRARIES})
