--- a/babai_asyn_cluster/CMakeLists.txt
+++ b/babai_asyn_cluster/CMakeLists.txt
@@ -20,13 +20,13 @@ if(CXX_COMPILER_GNUCLANG OR CXX_COMPILER_INTEL)
     set (CMAKE_CXX_FLAGS "-std=c++14 -Wall -Werror")
     set (CMAKE_C_FLAGS "-std=c11 -Wall -Werror")
     set (CMAKE_CXX_FLAGS_DEBUG "-g")
-    if(CXX_COMPILER_GNUCLANG)
-        set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Og")
-        set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og")
-    else()
-        set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O1")
-        set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1")
-    endif()
+     if(CXX_COMPILER_GNUCLANG)
+     	set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Og")
+     	set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og")
+     else()
+     set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O1")
+     set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1")
+     endif()
     set (CMAKE_CXX_FLAGS_RELEASE "-O3")
 elseif(CXX_COMPILER_PGI)
     set (CMAKE_CXX_FLAGS "-std=c++14")
@@ -43,7 +43,7 @@ endif()
 if (OPENMP_FOUND)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif ()
 
 #include_directories(${PYTHON_INCLUDE_DIRS})
@@ -52,10 +52,10 @@ endif ()
 #INCLUDE_DIRECTORIES("${NetCDF_INCLUDE_DIRS}")
 
 
-link_libraries(${PYTHON_LIBRARIES})
+#link_libraries(${PYTHON_LIBRARIES})
 
-add_executable(sils test.cpp SILS.h SILS.cpp)#matplotlibcpp.h)
-#target_link_libraries(babai_asyn Eigen3::Eigen)
+add_executable(sils test.cpp src/example/ils_block_search.cpp src/include/SILS.h src/source/SILS.cpp src/example/ils_babai_search.cpp)#matplotlibcpp.h)
+#target_link_libraries(sils Eigen3::Eigen)
 if(OpenMP_CXX_FOUND)
     target_link_libraries(sils PUBLIC OpenMP::OpenMP_CXX)
     message("OpenMP_CXX_FOUND")
