Update the CUDA version

--- a/babai_asyn_cuda/CMakeLists.txt
+++ b/babai_asyn_cuda/CMakeLists.txt
@@ -1,14 +1,11 @@
 cmake_minimum_required(VERSION 3.17)
 SET(CMAKE_CUDA_COMPILER /usr/local/cuda-11.1/bin/nvcc)
-project(babai_asyn_cuda LANGUAGES CUDA CXX)
+project(sils_cuda LANGUAGES CUDA CXX)
 
-FIND_PACKAGE(PythonInterp 3)
-find_package(PythonLibs 3.8 REQUIRED)
-message("Python_FOUND:${Python_FOUND}")
-find_package(PythonLibs 3.8 COMPONENTS Interpreter NumPy)
 find_package(OpenMP REQUIRED)
-find_package(OpenCV REQUIRED)
-find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+find_package(MPI REQUIRED)
+find_package(netCDF REQUIRED)
+find_package(Eigen3 REQUIRED)
 
 set(CUDA_LINK_LIBRARIES_KEYWORD PUBLIC)
 
@@ -20,6 +17,7 @@ endif ()
 if (OPENMP_FOUND)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif ()
 
 include_directories(${PYTHON_INCLUDE_DIRS})
@@ -27,7 +25,28 @@ include_directories(${PYTHON_INCLUDE_DIRS})
 link_libraries(${PYTHON_LIBRARIES})
 link_libraries(Eigen3::Eigen)
 
-add_executable(babai_asyn_cuda Babai_search_asyn.cu ../babai_asyn_c++/src/include/sils.h)
-target_link_libraries(babai_asyn_cuda Eigen3::Eigen)
-target_link_libraries(babai_asyn_cuda OpenMP::OpenMP_CXX)
-set_target_properties(babai_asyn_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+add_executable(sils_cuda sils_search_cuda.cu ils_cuda_solvers.cu ../babai_asyn_c++/src/include/sils.h)
+target_link_libraries(sils_cuda Eigen3::Eigen)
+target_link_libraries(sils_cuda OpenMP::OpenMP_CXX)
+set_target_properties(sils_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+
+
+if (MPI_FOUND)
+    target_link_libraries(sils_cuda ${MPI_LIBRARIES})
+    message("-- MPI_FOUND")
+endif ()
+
+if (OpenMP_CXX_FOUND)
+    target_link_libraries(sils_cuda OpenMP::OpenMP_CXX)
+    message("-- OpenMP_CXX_FOUND")
+endif ()
+
+if (netCDF_FOUND)
+    target_link_libraries(sils_cuda ${netCDF_LIBRARIES})
+    message("-- netCDF_FOUND")
+endif ()
+
+if (Eigen3_FOUND)
+    target_link_libraries(sils_cuda Eigen3::Eigen)
+    message("-- Eigen3_FOUND")
+endif ()
