--- a/babai_asyn_cuda/CMakeLists.txt
+++ b/babai_asyn_cuda/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
 SET(CMAKE_CUDA_COMPILER /usr/local/cuda-11.1/bin/nvcc)
-project(sils_cuda LANGUAGES CUDA CXX)
+project(cils_cuda LANGUAGES CUDA CXX)
 
 find_package(OpenMP REQUIRED)
 find_package(MPI REQUIRED)
@@ -25,28 +25,28 @@ include_directories(${PYTHON_INCLUDE_DIRS})
 link_libraries(${PYTHON_LIBRARIES})
 link_libraries(Eigen3::Eigen)
 
-add_executable(sils_cuda ils_search_cuda.cu cils_cuda_solvers.cu cils_cuda_solvers.cuh ../babai_asyn_c++/src/include/sils.h)
-target_link_libraries(sils_cuda Eigen3::Eigen)
-target_link_libraries(sils_cuda OpenMP::OpenMP_CXX)
-set_target_properties(sils_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+add_executable(cils_cuda ils_search_cuda.cu cils_cuda_solvers.cu cils_cuda_solvers.cuh ../babai_asyn_c++/src/include/cils.h)
+target_link_libraries(cils_cuda Eigen3::Eigen)
+target_link_libraries(cils_cuda OpenMP::OpenMP_CXX)
+set_target_properties(cils_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 
 
 if (MPI_FOUND)
-    target_link_libraries(sils_cuda ${MPI_LIBRARIES})
+    target_link_libraries(cils_cuda ${MPI_LIBRARIES})
     message("-- MPI_FOUND")
 endif ()
 
 if (OpenMP_CXX_FOUND)
-    target_link_libraries(sils_cuda OpenMP::OpenMP_CXX)
+    target_link_libraries(cils_cuda OpenMP::OpenMP_CXX)
     message("-- OpenMP_CXX_FOUND")
 endif ()
 
 if (netCDF_FOUND)
-    target_link_libraries(sils_cuda ${netCDF_LIBRARIES})
+    target_link_libraries(cils_cuda ${netCDF_LIBRARIES})
     message("-- netCDF_FOUND")
 endif ()
 
 if (Eigen3_FOUND)
-    target_link_libraries(sils_cuda Eigen3::Eigen)
+    target_link_libraries(cils_cuda Eigen3::Eigen)
     message("-- Eigen3_FOUND")
 endif ()
