Change vector to array

--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -8,29 +8,30 @@ find_package(netCDF REQUIRED)
 find_package(Eigen3 REQUIRED)
 set(CMAKE_CXX_STANDARD 17)
 
-#Basic options
-if (CXX_COMPILER_GNUCLANG OR CXX_COMPILER_INTEL)
-    set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Werror")
-    set(CMAKE_C_FLAGS "-std=c11 -Wall -Werror")
-    set(CMAKE_CXX_FLAGS_DEBUG "-g")
-    if (CXX_COMPILER_GNUCLANG)
-        set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Og")
-        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og")
+# detect C++ compiler - the C compiler must be the same type too
+if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU" OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+    set(CXX_COMPILER_GNUCLANG TRUE)
+    if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
+        set(CXX_COMPILER_GNU TRUE)
+        message(STATUS "GNU C++ compiler detected")
+        if (NOT ("${CMAKE_C_COMPILER_ID}" MATCHES "GNU"))
+            message(SEND_ERROR "C and C++ compilers should match!")
+        endif ()
     else ()
-        set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O1")
-        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1")
+        set(CXX_COMPILER_CLANG TRUE)
+        message(STATUS "Clang C++ compiler detected")
+        if (NOT ("${CMAKE_C_COMPILER_ID}" MATCHES "Clang"))
+            message(SEND_ERROR "C and C++ compilers should match!")
+        endif ()
     endif ()
-    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-elseif (CXX_COMPILER_PGI)
-    set(CMAKE_CXX_FLAGS "-std=c++14")
-    set(CMAKE_C_FLAGS "-std=c11")
-    set(CMAKE_CXX_FLAGS_DEBUG "-g")
-    set(CMAKE_CXX_FLAGS_RELEASE "-O2")
-elseif (CXX_COMPILER_CRAY)
-    set(CMAKE_CXX_FLAGS "-h std=c++14 -h error_on_warning")
-    set(CMAKE_C_FLAGS "-h std=c11 -h error_on_warning")
-    set(CMAKE_CXX_FLAGS_DEBUG "-g -O1")
-    set(CMAKE_CXX_FLAGS_RELEASE "-O2")
+elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
+    set(CXX_COMPILER_INTEL TRUE)
+    message(STATUS "Intel C++ compiler detected")
+    if (NOT ("${CMAKE_C_COMPILER_ID}" MATCHES "Intel"))
+        message(SEND_ERROR "C and C++ compilers should match!")
+    endif ()
+else ()
+    message(SEND_ERROR "Could not identify compiler!")
 endif ()
 
 if (OPENMP_FOUND)
@@ -78,4 +79,3 @@ if (OpenCL_FOUND)
     target_link_libraries(cils ${OPENCL_LIBRARIES})
     message("-- OpenCL_FOUND")
 endif ()
-
