--- a/babai_asyn_cluster/CMakeLists.txt
+++ b/babai_asyn_cluster/CMakeLists.txt
@@ -2,34 +2,36 @@ cmake_minimum_required(VERSION 3.8.2)
 project(cils)
 
 find_package(OpenMP REQUIRED)
+#find_package(OpenCL REQUIRED)
 find_package(MPI REQUIRED)
 find_package(netCDF REQUIRED)
 #find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 set(CMAKE_CXX_STANDARD 17)
 
-#Basic options
-if (CXX_COMPILER_GNUCLANG OR CXX_COMPILER_INTEL)
-    set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Werror")
-    set(CMAKE_C_FLAGS "-std=c11 -Wall -Werror")
-    set(CMAKE_CXX_FLAGS_DEBUG "-g")
-    if (CXX_COMPILER_GNUCLANG)
-        set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Og")
-        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og")
+# detect C++ compiler - the C compiler must be the same type too
+if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU" OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+    set(CXX_COMPILER_GNUCLANG TRUE)
+    if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
+        set(CXX_COMPILER_GNU TRUE)
+        message(STATUS "GNU C++ compiler detected")
+        if (NOT ("${CMAKE_C_COMPILER_ID}" MATCHES "GNU"))
+            message(SEND_ERROR "C and C++ compilers should match!")
+        endif ()
     else ()
-        set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O1")
-        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1")
+        set(CXX_COMPILER_CLANG TRUE)
+        message(STATUS "Clang C++ compiler detected")
+        if (NOT ("${CMAKE_C_COMPILER_ID}" MATCHES "Clang"))
+            message(SEND_ERROR "C and C++ compilers should match!")
+        endif ()
     endif ()
-    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-elseif (CXX_COMPILER_PGI)
-    set(CMAKE_CXX_FLAGS "-std=c++14")
-    set(CMAKE_C_FLAGS "-std=c11")
-    set(CMAKE_CXX_FLAGS_DEBUG "-g")
-    set(CMAKE_CXX_FLAGS_RELEASE "-O2")
-elseif (CXX_COMPILER_CRAY)
-    set(CMAKE_CXX_FLAGS "-h std=c++14 -h error_on_warning")
-    set(CMAKE_C_FLAGS "-h std=c11 -h error_on_warning")
-    set(CMAKE_CXX_FLAGS_DEBUG "-g -O1")
-    set(CMAKE_CXX_FLAGS_RELEASE "-O2")
+elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
+    set(CXX_COMPILER_INTEL TRUE)
+    message(STATUS "Intel C++ compiler detected")
+    if (NOT ("${CMAKE_C_COMPILER_ID}" MATCHES "Intel"))
+        message(SEND_ERROR "C and C++ compilers should match!")
+    endif ()
+else ()
+    message(SEND_ERROR "Could not identify compiler!")
 endif ()
 
 if (OPENMP_FOUND)
@@ -37,8 +39,6 @@ if (OPENMP_FOUND)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif ()
-
-include_directories("${EIGEN3_INCLUDE_DIR}")
 
 if (MPI_FOUND)
     include_directories(${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
@@ -52,7 +52,8 @@ if (MPI_FOUND)
 
 endif ()
 
-add_executable(cils test.cpp src/example/ils_block_search.cpp src/include/cils.h src/source/cils.cpp src/example/ils_babai_search.cpp src/source/cils_block_search_omp.cpp)# src/source/cils_reduction.cpp)
+
+add_executable(cils test.cpp src/example/ils_block_search.cpp src/include/cils.h src/source/cils.cpp src/example/ils_babai_search.cpp src/source/cils_block_search.cpp) #src/source/cils_block_search_OpenCL.cpp)# src/source/cils_reduction.cpp)
 
 if (MPI_FOUND)
     target_link_libraries(cils ${MPI_LIBRARIES})
@@ -69,8 +70,12 @@ if (netCDF_FOUND)
     message("-- netCDF_FOUND")
 endif ()
 
-#if (Eigen3_FOUND)
-##    target_link_libraries(cils Eigen3::Eigen)
-#    message("-- Eigen3_FOUND")
-#endif ()
+if (Eigen3_FOUND)
+    target_link_libraries(cils Eigen3::Eigen)
+    message("-- Eigen3_FOUND")
+endif ()
 
+#if (OpenCL_FOUND)
+#    target_link_libraries(cils ${OPENCL_LIBRARIES})
+#    message("-- OpenCL_FOUND")
+#endif ()
