Change vector to array

--- a/babai_asyn_cluster/CMakeLists.txt
+++ b/babai_asyn_cluster/CMakeLists.txt
@@ -70,10 +70,10 @@ if (netCDF_FOUND)
     message("-- netCDF_FOUND")
 endif ()
 
-if (Eigen3_FOUND)
-    target_link_libraries(cils Eigen3::Eigen)
-    message("-- Eigen3_FOUND")
-endif ()
+#if (Eigen3_FOUND)
+#    target_link_libraries(cils Eigen3::Eigen)
+#    message("-- Eigen3_FOUND")
+#endif ()
 
 #if (OpenCL_FOUND)
 #    target_link_libraries(cils ${OPENCL_LIBRARIES})
