Change the file folder

--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -6,10 +6,10 @@ find_package(OpenCL REQUIRED)
 find_package(MPI REQUIRED)
 find_package(netCDF REQUIRED)
 find_package(Eigen3 REQUIRED)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 11)
 
 # detect C++ compiler - the C compiler must be the same type too
-if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU" OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU" OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
     set(CXX_COMPILER_GNUCLANG TRUE)
     if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
         set(CXX_COMPILER_GNU TRUE)
@@ -34,11 +34,27 @@ else ()
     message(SEND_ERROR "Could not identify compiler!")
 endif ()
 
-if (OPENMP_FOUND)
+# to compile with OpenMP
+if(CXX_COMPILER_GNUCLANG)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-endif ()
+    message(STATUS "Compiling with OpenMP for GNU ${OpenMP_C_FLAGS}")
+elseif(CXX_COMPILER_INTEL)
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qopenmp")
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -qopenmp")
+    message(STATUS "Compiling with OpenMP for Intel")
+elseif(CXX_COMPILER_CRAY)
+    message(STATUS "Compiling with OpenMP for Cray")
+elseif(CXX_COMPILER_PGI)
+    message(STATUS "Compiling with OpenMP for PGI")
+else()
+    message(SEND_ERROR "Don't know OpenMP flag for this compiler!")
+endif()
+
+#if (OPENMP_FOUND)
+
+#endif ()
 
 if (MPI_FOUND)
     include_directories(${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
@@ -59,10 +75,10 @@ if (MPI_FOUND)
     message("-- MPI_FOUND")
 endif ()
 
-if (OpenMP_CXX_FOUND)
-    target_link_libraries(cils OpenMP::OpenMP_CXX)
-    message("-- OpenMP_CXX_FOUND")
-endif ()
+#if (OpenMP_CXX_FOUND)
+#    target_link_libraries(cils OpenMP::OpenMP_CXX)
+#    message("-- OpenMP_CXX_FOUND")
+#endif ()
 
 if (netCDF_FOUND)
     target_link_libraries(cils ${netCDF_LIBRARIES})
