--- a/babai_asyn_cluster/CMakeLists.txt
+++ b/babai_asyn_cluster/CMakeLists.txt
@@ -2,48 +2,15 @@ cmake_minimum_required(VERSION 3.8.2)
 project(cils)
 
 # detect C++ compiler - the C compiler must be the same type too
-#if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU" OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
-#    set(CXX_COMPILER_GNUCLANG TRUE)
-#    if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
-#        set(CXX_COMPILER_GNU TRUE)
-#        message(STATUS "GNU C++ compiler detected")
-#        if (NOT ("${CMAKE_C_COMPILER_ID}" MATCHES "GNU"))
-#            message(SEND_ERROR "C and C++ compilers should match!")
-#        endif ()
-#    else ()
-#        set(CXX_COMPILER_CLANG TRUE)
-#        message(STATUS "Clang C++ compiler detected")
-#        if (NOT ("${CMAKE_C_COMPILER_ID}" MATCHES "Clang"))
-#            message(SEND_ERROR "C and C++ compilers should match!")
-#        endif ()
-#    endif ()
-if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
-    set(CXX_COMPILER_INTEL TRUE)
-    message(STATUS "Intel C++ compiler detected")
-    if (NOT ("${CMAKE_C_COMPILER_ID}" MATCHES "Intel"))
-        message(SEND_ERROR "C and C++ compilers should match!")
-    endif ()
-else ()
-    message(SEND_ERROR "Could not identify compiler!")
-endif ()
-
 # to compile with OpenMP
-if(CXX_COMPILER_GNUCLANG)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-    message(STATUS "Compiling with OpenMP for GNU ${OpenMP_C_FLAGS}")
-elseif(CXX_COMPILER_INTEL)
+if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qopenmp")
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -qopenmp")
     message(STATUS "Compiling with OpenMP for Intel")
-elseif(CXX_COMPILER_CRAY)
-    message(STATUS "Compiling with OpenMP for Cray")
-elseif(CXX_COMPILER_PGI)
-    message(STATUS "Compiling with OpenMP for PGI")
 else()
     message(SEND_ERROR "Don't know OpenMP flag for this compiler!")
 endif()
+message(HERE!!!)
 
 find_package(OpenMP REQUIRED)
 #find_package(OpenCL REQUIRED)
