--- a/babai_asyn_cluster/CMakeLists.txt
+++ b/babai_asyn_cluster/CMakeLists.txt
@@ -86,10 +86,10 @@ elseif(CXX_COMPILER_CRAY)
 endif()
 
 find_package(OpenMP REQUIRED)
-#find_package(OpenCL REQUIRED)
+find_package(OpenCL REQUIRED)
 find_package(MPI REQUIRED)
 find_package(netCDF REQUIRED)
-#find_package(Eigen3 REQUIRED)
+find_package(Eigen3 REQUIRED)
 set(CMAKE_CXX_STANDARD 11)
 
 if (MPI_FOUND)
@@ -104,17 +104,17 @@ if (MPI_FOUND)
 
 endif ()
 
-add_executable(cils main.cpp)
+add_executable(cils main.cpp src/include/config.h)
 
 if (MPI_FOUND)
     target_link_libraries(cils ${MPI_LIBRARIES})
     message("-- MPI_FOUND")
 endif ()
 
-#if (OpenMP_CXX_FOUND)
-#    target_link_libraries(cils OpenMP::OpenMP_CXX)
-#    message("-- OpenMP_CXX_FOUND")
-#endif ()
+if (OpenMP_CXX_FOUND)
+    target_link_libraries(cils OpenMP::OpenMP_CXX)
+    message("-- OpenMP_CXX_FOUND")
+endif ()
 
 if (netCDF_FOUND)
     target_link_libraries(cils ${netCDF_LIBRARIES})
@@ -126,7 +126,7 @@ if (Eigen3_FOUND)
     message("-- Eigen3_FOUND")
 endif ()
 
-#if (OpenCL_FOUND)
-#    target_link_libraries(cils ${OPENCL_LIBRARIES})
-#    message("-- OpenCL_FOUND")
-#endif ()
+if (OpenCL_FOUND)
+    target_link_libraries(cils ${OPENCL_LIBRARIES})
+    message("-- OpenCL_FOUND")
+endif ()
