Change Stopping Criteria.

--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -86,6 +86,7 @@ elseif(CXX_COMPILER_CRAY)
 endif()
 
 find_package(OpenMP REQUIRED)
+#find_package(BLAS REQUIRED)
 find_package(OpenCL REQUIRED)
 find_package(MPI REQUIRED)
 find_package(netCDF REQUIRED)
@@ -130,3 +131,8 @@ if (OpenCL_FOUND)
     target_link_libraries(cils ${OPENCL_LIBRARIES})
     message("-- OpenCL_FOUND")
 endif ()
+
+#if (BLAS_FOUND)
+#    target_link_libraries(cils ${BLAS_LIBRARIES})
+#    message("-- BLAS_FOUND")
+#endif ()
