Try use Probability first

--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -86,7 +86,7 @@ elseif(CXX_COMPILER_CRAY)
 endif()
 
 find_package(OpenMP REQUIRED)
-#find_package(BLAS REQUIRED)
+find_package(LAPACK REQUIRED)
 find_package(OpenCL REQUIRED)
 find_package(MPI REQUIRED)
 find_package(netCDF REQUIRED)
@@ -132,7 +132,7 @@ if (OpenCL_FOUND)
     message("-- OpenCL_FOUND")
 endif ()
 
-#if (BLAS_FOUND)
-#    target_link_libraries(cils ${BLAS_LIBRARIES})
-#    message("-- BLAS_FOUND")
-#endif ()
+if (LAPACK_FOUND)
+    target_link_libraries(cils ${LAPACK_LIBRARIES})
+    message("-- LAPACK_FOUND")
+endif ()
