--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -86,11 +86,10 @@ elseif(CXX_COMPILER_CRAY)
 endif()
 
 find_package(OpenMP REQUIRED)
-#find_package(LAPACK REQUIRED)
+find_package(LAPACK REQUIRED)
 #find_package(OpenCL REQUIRED)
 find_package(MPI REQUIRED)
 find_package(netCDF REQUIRED)
-#find_package(Eigen3 REQUIRED)
 set(CMAKE_CXX_STANDARD 11)
 
 if (MPI_FOUND)
@@ -122,17 +121,13 @@ if (netCDF_FOUND)
     message("-- netCDF_FOUND")
 endif ()
 
-#if (Eigen3_FOUND)
-#    target_link_libraries(cils Eigen3::Eigen)
-#    message("-- Eigen3_FOUND")
-#endif ()
 #
 #if (OpenCL_FOUND)
 #    target_link_libraries(cils ${OPENCL_LIBRARIES})
 #    message("-- OpenCL_FOUND")
 #endif ()
 #
-#if (LAPACK_FOUND)
-#    target_link_libraries(cils ${LAPACK_LIBRARIES})
-#    message("-- LAPACK_FOUND")
-#endif ()
+if (LAPACK_FOUND)
+    target_link_libraries(cils ${LAPACK_LIBRARIES})
+    message("-- LAPACK_FOUND")
+endif ()
