Change the initialization. Prepare for generated problems.

--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -86,7 +86,7 @@ elseif(CXX_COMPILER_CRAY)
 endif()
 
 find_package(OpenMP REQUIRED)
-find_package(LAPACK REQUIRED)
+#find_package(LAPACK REQUIRED)
 #find_package(OpenCL REQUIRED)
 find_package(MPI REQUIRED)
 find_package(netCDF REQUIRED)
@@ -127,7 +127,7 @@ endif ()
 #    message("-- OpenCL_FOUND")
 #endif ()
 #
-if (LAPACK_FOUND)
-    target_link_libraries(cils ${LAPACK_LIBRARIES})
-    message("-- LAPACK_FOUND")
-endif ()
+#if (LAPACK_FOUND)
+#    target_link_libraries(cils ${LAPACK_LIBRARIES})
+#    message("-- LAPACK_FOUND")
+#endif ()
